--- a/src/css/forms.less
+++ b/src/css/forms.less
@@ -106,9 +106,6 @@
 
     .error-message {
         color: @error-color;
-        position: absolute;
-        width: 100%;
-        top: calc(100% - 15px);
-        left: 0;
+        display: block;
     }
 }
