--- a/src/css/nav.less
+++ b/src/css/nav.less
@@ -84,7 +84,7 @@
     }
 
     .has-alert & {
-        top: 91px;
+        top: 86px;
 
         @media only screen and (min-width: 409px) {
             top: 66px;
