--- a/src/css/typography.less
+++ b/src/css/typography.less
@@ -34,7 +34,6 @@ h4, .h4 {
     font-size: 20px;
 }
 
-h1, .h1,
 h2, .h2,
 h3, .h3,
 h4, .h4 {
