--- a/src/css/vars.less
+++ b/src/css/vars.less
@@ -34,6 +34,7 @@
 
 // Breakpoints
 @max-page-width: 1440px;
+@xl: ~'only screen and (min-width: 1200px)';
 @mobile: ~'only screen and (max-width: 767px)';
 @tablet-up: ~'only screen and (min-width: 768px)';
 @md-up: ~'only screen and (min-width: 992px)'; // Bootstrap grid md breakpoint
